[package]
name = "x402-sdk"
version = "0.2.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "aptos network tool."
keywords = ["http", "x402", "finance", "web"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/x402-sdk"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0.14"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
rand = "0.9.2"
reqwest = { version = "0.11", features = ["json"] }
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
solana-commitment-config = "3.0.0"